--- a/WebContent/views/desktop/administracion/perfil/PerfilIndex.zul
+++ b/WebContent/views/desktop/administracion/perfil/PerfilIndex.zul
@@ -19,68 +19,128 @@
 			<div class="col s8">
 				<div sclass="row">
 					<div class="input-field col s6">
-						<n:label for="rif" class="active">
+						<n:label for="rif" class="active"
+							style="font-size: 18px;color: #3b85a1 !important">
 							Usuario:
 						</n:label>
-						<label style="font-size: 16px;"
+						<label
+							style=" font-size: 16px;color: #8D7A6F !important "
 							value="@bind(vm.selectedObject.correo)">
 						</label>
 					</div>
 
 					<div class="input-field col s6">
-						<n:label for="nombre" class="active">
+						<n:label for="nombre" class="active"
+							style="font-size: 18px;color: #3b85a1 !important">
 							Rol:
 						</n:label>
-						<label style="font-size: 16px;"
+						<label
+							style="font-size: 16px;color: #8D7A6F !important "
 							value="@bind(vm.selectedObject.fkRol.nombre)">
 						</label>
 					</div>
 				</div>
 				<div sclass="row">
 					<div class="input-field col s6">
-						<n:label for="rif" class="active">
+						<n:label for="rif" class="active"
+							style="font-size: 18px;color: #3b85a1 !important">
 							Nombres:
 						</n:label>
-						<label style="font-size: 16px;"
+						<label
+							style=" font-size: 16px;color: #8D7A6F !important "
 							value="@bind(vm.selectedObject.persona.nombre)">
 						</label>
 					</div>
 
 					<div class="input-field col s6">
-						<n:label for="nombre" class="active">
+						<n:label for="nombre" class="active"
+							style="font-size: 18px;color: #3b85a1 !important">
 							Apellidos:
 						</n:label>
-						<label style="font-size: 16px;"
+						<label
+							style=" font-size: 16px;color: #8D7A6F !important "
 							value="@bind(vm.selectedObject.persona.apellido)">
 						</label>
 					</div>
 				</div>
 				<div sclass="row">
 					<div class="input-field col s6">
-						<n:label for="rif" class="active">
+						<n:label for="rif" class="active"
+							style="font-size: 18px;color: #3b85a1 !important">
 							Sexo:
 						</n:label>
-						<label style="font-size: 16px;"
+						<label
+							style=" font-size: 16px;color: #8D7A6F !important "
 							visible="@bind(vm.selectedObject.persona.sexo eq 0)"
 							value="Masculina">
 						</label>
-						<label style="font-size: 16px;"
+						<label
+							style=" font-size: 16px;color: #8D7A6F !important "
 							visible="@bind(vm.selectedObject.persona.sexo eq 1)"
 							value="Femenino">
 						</label>
 					</div>
 
 					<div class="input-field col s6">
-						<n:label for="nombre" class="active">
+						<n:label for="nombre" class="active"
+							style="font-size: 18px;color: #3b85a1 !important">
 							Fecha de Nacimiento:
 						</n:label>
-						<label style="font-size: 16px;"
+						<label
+							style=" font-size: 16px;color: #8D7A6F !important "
 							value="${m:convertirLongADate(vm.selectedObject.persona.fechaNacimiento)}">
 						</label>
 					</div>
 
 				</div>
 
+
+				<div sclass="row">
+					<div class="input-field col s6">
+						<n:label for="rif" class="active"
+							style="font-size: 18px;color: #3b85a1 !important">
+							Ciudad:
+						</n:label>
+						<label
+							style=" font-size: 16px;color: #8D7A6F !important "
+							value="@bind(vm.selectedObject.persona.fkCiudad.nombre)">
+						</label>
+
+					</div>
+
+					<div class="input-field col s6">
+						<n:label for="nombre" class="active"
+							style="font-size: 18px;color: #3b85a1 !important">
+							Estado:
+						</n:label>
+						<label
+							style=" font-size: 16px;color: #8D7A6F !important "
+							value="@bind(vm.selectedObject.persona.fkCiudad.fkEstado.nombre)">
+						</label>
+					</div>
+				</div>
+				<div sclass="row">
+					<div class="input-field col s6">
+						<n:label for="rif" class="active"
+							style="font-size: 18px;color: #3b85a1 !important">
+							Dirección:
+						</n:label>
+						<label
+							style=" font-size: 16px;color: #8D7A6F !important "
+							value="@bind(vm.selectedObject.persona.direccion)">
+						</label>
+					</div>
+					<div class="input-field col s6">
+						<n:label for="rif" class="active"
+							style="font-size: 18px;color: #3b85a1 !important">
+							Teléfono:
+						</n:label>
+						<label
+							style=" font-size: 16px;color: #8D7A6F !important "
+							value="@bind(vm.selectedObject.persona.telefono1)">
+						</label>
+					</div>
+				</div>
 			</div>
 		</div>
 
